--- a/shifts/templates/shifts/home.html
+++ b/shifts/templates/shifts/home.html
@@ -1,2 +1,10 @@
-<h1>Welcome to the Shift Scheduler!</h1>
-<p>Select an option from the menu to begin.</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Scheduling App</title>
+</head>
+<body>
+    <h1>Welcome to the Scheduling App</h1>
+    <p>This is the home page.</p>
+</body>
+</html>
