--- a/shifts/templates/registration/register.html
+++ b/shifts/templates/registration/register.html
@@ -1,11 +1,13 @@
 {% extends 'shifts/base.html' %}
 
 {% block content %}
-<h2>Request Time Off</h2>
+<h2>Register</h2>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit Request</button>
+    <button type="submit">Register</button>
 </form>
+
+<p>Already have an account? <a href="{% url 'login' %}">Login here</a>.</p>
 {% endblock %}
