--- a/shifts/templates/shifts/home.html
+++ b/shifts/templates/shifts/home.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Scheduling App</title>
-</head>
-<body>
-    <h1>Welcome to the Scheduling App</h1>
-    <p>This is the home page.</p>
-</body>
-</html>
+{% extends 'shifts/base.html' %}
+
+{% block content %}
+<h2>Welcome, {{ user.username }}!</h2>
+
+{% if shifts %}
+    <h4>Your Upcoming Shifts:</h4>
+    <ul class="list-group">
+        {% for shift in shifts %}
+            <li class="list-group-item">
+                <strong>{{ shift.date }}</strong> – {{ shift.start_time }} to {{ shift.end_time }}
+            </li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>You don't have any upcoming shifts.</p>
+{% endif %}
+{% endblock %}
