--- a/shifts/templates/shifts/set_availability.html
+++ b/shifts/templates/shifts/set_availability.html
@@ -1,11 +1,10 @@
 {% extends 'shifts/base.html' %}
-
 {% block content %}
 <h2>Set Your Weekly Availability</h2>
 
 <form method="post">
     {% csrf_token %}
-    <table>
+    <table class="table">
         <thead>
         <tr>
             <th>Day</th>
@@ -18,7 +17,7 @@
         {% for form in formset %}
         <tr>
             <td>
-                {{ form.day.value|default:"" }}
+                {{ form.initial.day }}
                 {{ form.day.as_hidden }}
             </td>
             <td>{{ form.available }}</td>
@@ -29,6 +28,6 @@
         </tbody>
     </table>
 
-    <button type="submit">Save Availability</button>
+    <button class="btn btn-primary" type="submit">Save Availability</button>
 </form>
 {% endblock %}
