dashboard initial try

--- a/shifts/templates/shifts/available_shifts.html
+++ b/shifts/templates/shifts/available_shifts.html
@@ -1,4 +1,5 @@
 {% extends 'shifts/base.html' %}
+{% include 'shifts/partials/available_shifts_partial.html' %}
 {% block content %}
   <h2>Available Shifts to Pick Up</h2>
   <ul>
