--- a/shifts/templates/shifts/set_availability.html
+++ b/shifts/templates/shifts/set_availability.html
@@ -1,4 +1,5 @@
 {% extends 'shifts/base.html' %}
+{% include 'shifts/partials/availability_partial.html' %}
 {% block content %}
 <h2>Set Your Weekly Availability</h2>
 
