--- a/shifts/templates/shifts/time_off_list.html
+++ b/shifts/templates/shifts/time_off_list.html
@@ -1,4 +1,5 @@
 {% extends 'shifts/base.html' %}
+{% include 'shifts/partials/timeoff_partial.html' %}
 
 {% block content %}
 <h2>My Time Off Requests</h2>
