--- a/shifts/templates/shifts/partials/availability_partial.html
+++ b/shifts/templates/shifts/partials/availability_partial.html
@@ -1,3 +1,4 @@
+{# shifts/templates/shifts/partials/availability_partial.html #}
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h2>My Availability</h2>
   <a href="{% url 'set_availability' %}" class="btn btn-primary">
@@ -7,10 +8,7 @@
 
 <table class="table">
   <thead>
-  <tr>
-    <th>Day</th>
-    <th>Times</th>
-  </tr>
+  <tr><th>Day</th><th>Times</th></tr>
   </thead>
   <tbody>
   {% for avail in availabilities %}
@@ -25,9 +23,7 @@
     </td>
   </tr>
   {% empty %}
-  <tr>
-    <td colspan="2">No availability set.</td>
-  </tr>
+  <tr><td colspan="2">No availability set.</td></tr>
   {% endfor %}
   </tbody>
 </table>
