--- a/shifts/templates/shifts/set_availability.html
+++ b/shifts/templates/shifts/set_availability.html
@@ -1,7 +1,9 @@
 {% extends 'shifts/base.html' %}
+
 {% block content %}
 <div class="container mt-4">
     <h2>Set Your Weekly Availability</h2>
+
     <form method="post">
         {% csrf_token %}
         <table class="table">
@@ -16,17 +18,19 @@
             <tbody>
             {% for form in formset %}
             <tr>
+                {# show the day name and keep it hidden in the form #}
                 <td>
                     {{ form.initial.day }}
                     {{ form.day.as_hidden }}
                 </td>
-                <td>{{ form.available }}</td>
+                <td>{{ form.is_available }}</td>
                 <td>{{ form.start_time }}</td>
                 <td>{{ form.end_time }}</td>
             </tr>
             {% endfor %}
             </tbody>
         </table>
+
         <button class="btn btn-primary" type="submit">Save Availability</button>
     </form>
 </div>
