--- a/shifts/templates/shifts/set_availability.html
+++ b/shifts/templates/shifts/set_availability.html
@@ -1,11 +1,11 @@
 {% extends 'shifts/base.html' %}
-
 {% block content %}
 <div class="container mt-4">
     <h2>Set Your Weekly Availability</h2>
 
     <form method="post">
         {% csrf_token %}
+
         <table class="table">
             <thead>
             <tr>
@@ -18,7 +18,6 @@
             <tbody>
             {% for form in formset %}
             <tr>
-                {# show the day name and keep it hidden in the form #}
                 <td>
                     {{ form.initial.day }}
                     {{ form.day.as_hidden }}
@@ -33,5 +32,17 @@
 
         <button class="btn btn-primary" type="submit">Save Availability</button>
     </form>
+
+    {# DEBUG: show any form-level errors #}
+    {% if formset.non_form_errors %}
+    <div class="alert alert-danger mt-3">
+        {{ formset.non_form_errors }}
+    </div>
+    {% endif %}
+    {% for form in formset %}
+    {% if form.errors %}
+    <pre class="text-danger">{{ form.errors }}</pre>
+    {% endif %}
+    {% endfor %}
 </div>
 {% endblock %}
