--- a/shifts/templates/shifts/base.html
+++ b/shifts/templates/shifts/base.html
@@ -16,6 +16,9 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css"
     />
+
+    <!-- FullCalendar JS -->
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
 </head>
 
 <body>
